// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`additionalProperties - additionalProperties false - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.2.2
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const StrictObject = z.object({
  name: z.string()
});
export type StrictObject = z.output<typeof StrictObject>;"
`;

exports[`additionalProperties - additionalProperties true (any value) - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.2.2
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const AnyValueRecord = z.record(z.string(), z.unknown());
export type AnyValueRecord = z.output<typeof AnyValueRecord>;"
`;

exports[`additionalProperties - additionalProperties true with properties - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.2.2
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const ObjectWithAnyCatchall = z.object({
  id: z.number()
}).catchall(z.unknown());
export type ObjectWithAnyCatchall = z.output<typeof ObjectWithAnyCatchall>;"
`;

exports[`additionalProperties - no additionalProperties - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.2.2
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const SimpleObject = z.object({
  name: z.string()
});
export type SimpleObject = z.output<typeof SimpleObject>;"
`;

exports[`additionalProperties - no properties with schema object (record) - effect 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.2.2
/*prettier-ignore*/
/*eslint-disable*/
import * as Schema from "effect/Schema";
import { Effect } from "effect";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const RecordSchema = Schema.Record({
  key: Schema.String,
  value: Schema.Number.pipe(Schema.int()).pipe(Schema.mutable)
}).pipe(Schema.mutable);
export type RecordSchema = Schema.Schema.Type<typeof RecordSchema>;"
`;

exports[`additionalProperties - no properties with schema object (record) - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.2.2
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const RecordSchema = z.record(z.string(), z.int());
export type RecordSchema = z.output<typeof RecordSchema>;"
`;

exports[`additionalProperties - with properties (catchall) - effect 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.2.2
/*prettier-ignore*/
/*eslint-disable*/
import * as Schema from "effect/Schema";
import { Effect } from "effect";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const ObjectWithCatchall = Schema.extend(Schema.Struct({
  name: Schema.String.pipe(Schema.mutable)
}), Schema.Record({
  key: Schema.String,
  value: Schema.String.pipe(Schema.mutable)
})).pipe(Schema.mutable);
export type ObjectWithCatchall = Schema.Schema.Type<typeof ObjectWithCatchall>;"
`;

exports[`additionalProperties - with properties (catchall) - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.2.2
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const ObjectWithCatchall = z.object({
  name: z.string()
}).catchall(z.string());
export type ObjectWithCatchall = z.output<typeof ObjectWithCatchall>;"
`;
